objects/NCS_MI_Contact__c.object
<CustomObject>
    <fields>
        <fullName>PG_Twitter_handle__c</fullName>
        <label>PG Twitter handle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_first_name__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, RIGHT( LEFT( Inclusion_Detail__r.Contact__r.Parent_Name__c , FIND(&quot; &quot;, Inclusion_Detail__r.Contact__r.Parent_Name__c,6)),LEN(LEFT( Inclusion_Detail__r.Contact__r.Parent_Name__c , FIND(&quot; &quot;, Inclusion_Detail__r.Contact__r.Parent_Name__c,6))) - FIND(&quot; &quot;, Inclusion_Detail__r.Contact__r.Parent_Name__c,1)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG first name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_home_phone__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.Parent_Phone__c ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG home phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_last_name__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_new_consent_statement__c =TRUE, RIGHT( Inclusion_Detail__r.Contact__r.Parent_Name__c, LEN(Inclusion_Detail__r.Contact__r.Parent_Name__c)-FIND(&quot; &quot;, Inclusion_Detail__r.Contact__r.Parent_Name__c,6)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG last name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_mobile__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.Parent_Mobile_Phone__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_adaption__c</fullName>
        <formula>IF( AND( 
ISBLANK( Inclusion_Detail__r.Contact__r.MobilePhone ), 
DATEVALUE(Inclusion_Detail__r.Contact__r.CreatedDate) &lt; DATE(2015,05,05) 
), 
&quot;07700 900858&quot;, 
Inclusion_Detail__r.Contact__r.MobilePhone
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone adaption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_16_current_activity__c</fullName>
        <label>Post 16 current activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postcode_anonymised__c</fullName>
        <description>The Contact&apos;s postcode. Where we have consent to share data, this is the full postcode. Where we do not have this consent, the postcode is anonymised through removal of the last 3 characters (the remnants of the postcode can still be used for local authority identification)</description>
        <formula>IF(OR(
ISBLANK(Inclusion_Detail__r.Contact__r.MailingPostalCode ), 
Inclusion_Detail__r.Contact__r.MailingPostalCode =&quot;0&quot;, 
 Inclusion_Detail__r.Contact__r.Postcode_error__c = TRUE 
)
,

IF( NCS_Provider_ID__c = &quot;TCN LNN&quot;,&quot;N1 1AA&quot;,
IF( NCS_Provider_ID__c = &quot;TCN LNS&quot;,&quot;SE1 7NQ&quot;,
IF( NCS_Provider_ID__c = &quot;TCN SE2&quot;,&quot;RG2 7QA&quot;,
IF( NCS_Provider_ID__c = &quot;TCN SE3&quot;,&quot;GU1 3AJ&quot;,
IF( NCS_Provider_ID__c = &quot;TCN WM2&quot;,&quot;B19 2SA&quot;,
IF( NCS_Provider_ID__c = &quot;TCN NW2&quot;,&quot;M32 0RS&quot;,
IF( NCS_Provider_ID__c = &quot;TCN&quot;,&quot;WN2 5RJ&quot;,


&quot;N1 1AA&quot;)))))))

,
IF(CONTAINS(Inclusion_Detail__r.Contact__r.MailingPostalCode ,&quot; &quot;),Inclusion_Detail__r.Contact__r.MailingPostalCode,
LEFT(Inclusion_Detail__r.Contact__r.MailingPostalCode,LEN(Inclusion_Detail__r.Contact__r.MailingPostalCode)-3)&amp;&quot; &quot;&amp;RIGHT(Inclusion_Detail__r.Contact__r.MailingPostalCode,3)
))</formula>
        <inlineHelpText>The YP&apos;s postcode. Where we have consent to share data, this is the full postcode. Where we do not have this consent, the postcode is anonymised through removal of the last 3 characters.</inlineHelpText>
        <label>Postcode (anonymised)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <description>replace 2014 with year on record type changeover</description>
        <formula>IF(OR(ISBLANK(Inclusion_Detail__r.Contact__r.Date_P2_data_form_received_by_CO__c ),ISBLANK(payment_recieved__c ),ISBLANK( Gender__c  )),&quot;&quot;,

IF(NOT(ISBLANK( Inclusion_Detail__r.Contact__r.Wave_started__c )),  Year__c &amp; Inclusion_Detail__r.Contact__r.Wave_started__c,

IF(NOT(ISBLANK( Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Name )), Year__c &amp; Inclusion_Detail__r.Contact__r.Assigned_Wave__r.Name,

IF(NOT(ISBLANK( Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Name )), Year__c &amp; Inclusion_Detail__r.Contact__r.Reserved_Wave__r.Name,

IF(NOT(ISBLANK( Inclusion_Detail__r.Contact__r.Withdrawn_from_Wave__c )), Year__c &amp; Inclusion_Detail__r.Contact__r.Withdrawn_from_Wave__c,

&quot;&quot;))))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Complete__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.NCS_or_TCN_registration_complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_type__c</fullName>
        <formula>IF( ISBLANK( Inclusion_Detail__r.Contact__r.Date_PG_intro_letter_created__c ) , NULL, &quot;Letter&quot;)</formula>
        <label>Response type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEN_Target__c</fullName>
        <label>SEN Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEN__c</fullName>
        <formula>IF(ISPICKVAL( Inclusion_Detail__r.Statement_of_SEN__c , &quot;Yes&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEN_real_Target__c</fullName>
        <label>SEN &apos;real&apos; Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Contact_Id_from_Trust__c</fullName>
        <label>SFDC Contact Id from Trust</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_ID__c</fullName>
        <formula>IF(AND( NCS_Prime_ID__c =&quot;TCN&quot; ,

OR( Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;119751&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;119758&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;119792&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;132834&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;110125&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;132823&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;116929&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;TCN222333&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;TCN222334&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;TCN222335&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;130443&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;1197670.1&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;138459&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;110125&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;136924&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;119746&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;138835&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;119774&quot;)),

&quot;&quot;,


IF(AND( NCS_Prime_ID__c =&quot;INS&quot; ,

OR( Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;135864&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;130523&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;130522&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;130506&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;132834.1&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;130499&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;106537&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;TCNA218266&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;1197670.1&quot;,
Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c = &quot;137210&quot;)),

&quot;&quot;,

Inclusion_Detail__r.Contact__r.School__r.NCS_Edubase_URN__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <formula>IF(ISBLANK( Inclusion_Detail__r.Contact__r.School_first_application__c ),

TEXT(Inclusion_Detail__r.Contact__r.School__r.School_type__c)

,
TEXT(Inclusion_Detail__r.Contact__r.School_first_application__r.School_type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_up__c</fullName>
        <formula>IF(OR( Inclusion_Detail__r.Agree_to_main_consent__c = FALSE,
ISBLANK( Inclusion_Detail__r.Contact__r.Account.Date_of_first_payment__c )
),
NULL,Inclusion_Detail__r.Contact__r.Account.Date_of_first_payment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_case_age_type__c</fullName>
        <formula>IF( ISPICKVAL( Inclusion_Detail__r.Contact__r.DoB_issue_resolved__c , &quot;Approved - Other Criteria&quot;),&quot;Other disability&quot;,TEXT(Inclusion_Detail__r.Contact__r.DoB_issue_resolved__c))</formula>
        <label>Special case age type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Phase_2__c</fullName>
        <formula>IF(OR(
ISBLANK(Inclusion_Detail__r.Contact__r.Date_P2_data_form_received_by_CO__c ),
ISBLANK(payment_recieved__c ),
ISBLANK( Team__c ),
ISBLANK( Programme__c )

)

,&quot;0&quot;, 

IF(ISBLANK( Inclusion_Detail__r.Contact__r.Wave_started__c ),

IF(ISBLANK(Inclusion_Detail__r.Contact__r.Assigned_Wave__c),&quot;0&quot;,

IF(ISBLANK( Inclusion_Detail__r.Contact__r.Assigned_Wave__r.MM_confirmed_PCKO_starters__c),&quot;0&quot;,&quot;1&quot;))

,

&quot;1&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started Phase 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Phase_3__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Current_Phase__c  &gt; 3,&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started Phase 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Phase_4__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Current_Phase__c  &gt; 3,&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started Phase 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_TEST__c</fullName>
        <formula>IF(ISBLANK(Programme__c), NULL,(IF(OR(ISBLANK(Inclusion_Detail__r.Contact__r.Date_P2_data_form_received_by_CO__c),ISBLANK(payment_recieved__c)),&quot;&quot;,IF(ISBLANK(Inclusion_Detail__r.Contact__r.Team__c),&quot;&quot;,&quot;2015&quot;&amp;Inclusion_Detail__r.Contact__r.Team__c))))</formula>
        <label>Team TEST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>IF(
   OR(
      ISBLANK(Inclusion_Detail__r.Contact__r.Date_P2_data_form_received_by_CO__c ),
      ISBLANK(payment_recieved__c )),
   &quot;&quot;, 
   IF(
      ISBLANK(Inclusion_Detail__r.Contact__r.Team__c),
      &quot;&quot;,
      &quot;2016&quot;&amp;Inclusion_Detail__r.Contact__r.Team__c
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_seasons__c</fullName>
        <formula>IF( Interested_in_Spring_New__c =&quot;1&quot;,1,0)
+IF(  Interested_in_Summer_New__c  =&quot;1&quot;,1,0)
+IF(  Interested_in_Autumn_New__c  =&quot;1&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total seasons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteering__c</fullName>
        <label>Volunteering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wave_start_date__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.Assigned_Wave__r.PC_KO_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wheelchair_user_or_mobility_difficulties__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wheelchair user or mobility difficulties</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X31_August_current_year__c</fullName>
        <defaultValue>DATEVALUE(&quot;2016-08-31&quot;)</defaultValue>
        <description>Holds date of 31 August for current delivery year, so that other formulas can reference this</description>
        <inlineHelpText>Holds date of 31 August for current delivery year, so that other formulas can reference this</inlineHelpText>
        <label>31 August current year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YP_Address_1__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Address_2__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Address_3__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Address 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_County__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE ,  Inclusion_Detail__r.Contact__r.County_region__c  , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Email__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_First_Name__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.FirstName , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Home_phone__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.HomePhone , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Home phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Last_Name__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.LastName , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Mobile__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.MobilePhone, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Postcode__c</fullName>
        <formula>IF(AND( Inclusion_Detail__r.Contact__r.RecordType.Name =&quot;YP2014&quot;, Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE), Inclusion_Detail__r.Contact__r.Post_code__c,
IF(AND( Inclusion_Detail__r.Contact__r.RecordType.Name =&quot;YP2013&quot;, 
DATEVALUE(Inclusion_Detail__r.Contact__r.CreatedDate) &gt; DATE(2013,02,19)), Inclusion_Detail__r.Contact__r.Post_code__c,
IF(AND(ISPICKVAL(Inclusion_Detail__r.Contact__r.LeadSource, &quot;School paper form (Marketing)&quot;), DATEVALUE(Inclusion_Detail__r.Contact__r.CreatedDate) &gt; DATE(2013,09,01), Inclusion_Detail__r.Contact__r.School__r.Region_2012__c = &quot;London&quot;), Inclusion_Detail__r.Contact__r.Post_code__c,
IF(AND(ISPICKVAL(Inclusion_Detail__r.Contact__r.LeadSource, &quot;School paper form (Marketing)&quot;), DATEVALUE(Inclusion_Detail__r.Contact__r.CreatedDate) &gt; DATE(2013,03,06), NOT(Inclusion_Detail__r.Contact__r.School__r.Region_2012__c = &quot;London&quot;)), Inclusion_Detail__r.Contact__r.Post_code__c, Postcode_anonymised__c
))))</formula>
        <label>YP Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Twitter_handle__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.Twitter_handle__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Twitter handle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_facebook__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_new_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.Facebook_name__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP facebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_town__c</fullName>
        <formula>IF( Inclusion_Detail__r.Contact__r.Agree_to_main_consent_statement__c =TRUE, Inclusion_Detail__r.Contact__r.Town_City__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP town</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Formula is not future proof and does not take into account seasons 2 years ago or older. The formula reaches a compile limit error if we try to incorporate all the possibilities. See Pivotal Tracker https://www.pivotaltracker.com/story/show/120275799</description>
        <formula>IF(
   ISBLANK( Inclusion_Detail__r.Contact__r.Assigned_Wave__c),
   IF(
      ISBLANK( Inclusion_Detail__r.Contact__r.Reserved_Wave__c),
      IF(
         ISBLANK( Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c),
         IF(
            ISBLANK( Inclusion_Detail__r.Contact__r.Season__c ),
            TEXT(YEAR( DATEVALUE( Inclusion_Detail__r.CreatedDate ))),
            IF(
               OR(
                  INCLUDES(Inclusion_Detail__r.Contact__r.Season__c,&quot;Summer 2016&quot;),
                  INCLUDES(Inclusion_Detail__r.Contact__r.Season__c,&quot;Autumn 2016&quot; )
                 ),
               &quot;2016&quot;,
               &quot;2015&quot;
               )
            ),
         RIGHT(Inclusion_Detail__r.Contact__r.NCS_Application_Primary_Season__c,4)
         ),
      TEXT(YEAR(Inclusion_Detail__r.Contact__r.Reserved_Wave__r.PC_KO_day__c) )
      ),
   TEXT(YEAR(Inclusion_Detail__r.Contact__r.Assigned_Wave__r.PC_KO_day__c) )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dummy_email_autonumber__c</fullName>
        <displayFormat>TCN{0000000}</displayFormat>
        <label>dummy email autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>email_adaption__c</fullName>
        <formula>IF( AND(
ISBLANK(Inclusion_Detail__r.Contact__r.Email ),
DATEVALUE(Inclusion_Detail__r.Contact__r.CreatedDate) &lt; DATE(2015,05,05)
),
 Inclusion_Detail__r.Contact__r.TCNContactId__c  &amp;&quot;@ncstrust.co.uk&quot;,
Inclusion_Detail__r.Contact__r.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email adaption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interested_in_spring__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Auto-filled with &apos;No&apos; as we do not offer a spring programme</description>
        <inlineHelpText>Auto-filled with &apos;No&apos; as we do not offer a spring programme</inlineHelpText>
        <label>Interested in spring programme</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_recieved__c</fullName>
        <formula>Inclusion_Detail__r.Contact__r.Account.Date_First_Payment_Received_Workflow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>payment recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sign_up_2015__c</fullName>
        <formula>IF(OR(
ISBLANK( payment_recieved__c ),
ISBLANK( Registration_Complete__c )
),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sign up 2015</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NCS MI Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NCSMIC{000000}</displayFormat>
        <label>NCS MI Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCS MI Contacts</pluralLabel>
    <recordTypes>
        <fullName>Actual_Assigned</fullName>
        <active>true</active>
        <label>Actual Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>PbR_Target</fullName>
        <active>true</active>
        <label>PbR Target</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>